# FastAPI-PCR

./: pyproject.toml  requeriments.txt  requirements.txt
pcr/: database.py  main.py  security.py
pcr/models/: recipes.py  users.py
pcr/routers/: recipes.py  users.py
src/: database.py  main.py  models.py  recipes.json  security.py  table.sql
src/routers/: recipes.py  users.py
src/schemas/: users.py
